proj1/tests/other-tests/MINZ_tests/error/bitwise_not_allowed.py
i = 16
j = 8
print i | j
print i & j
print i >> 2
print j << 2
print i ^ j
print ~i